custom scrollbars a lot closer to working correctly

--- a/rb/media/css/jquery.jscrollpane.css
+++ b/rb/media/css/jquery.jscrollpane.css
@@ -21,9 +21,8 @@
 	position: absolute;
 	top: 0;
 	right: 0;
-	width: 16px;
+	width: 8px;
 	height: 100%;
-	background: red;
 }
 
 .jspHorizontalBar
@@ -55,17 +54,17 @@
 
 .jspTrack
 {
-	background: #dde;
 	position: relative;
 }
 
 .jspDrag
 {
-	background: #bbd;
+	background: #cfcfcf;
 	position: relative;
 	top: 0;
 	left: 0;
 	cursor: pointer;
+	border-radius: 5px;
 }
 
 .jspHorizontalBar .jspTrack,
